@@ -1,5 +1,6 @@
 2002-11-23  Forgotten  <forgotten@users.sourceforge.net>
 
+	* src/win32/GBACheats.cpp: cleaned up some unused stuff 
 	* src/SDL.cpp: added support for long options
 	* src/Flash.cpp: added support for 128K Flash (thanks DesktopMan)
 	* src/GBA.cpp: added support for 128K Flash 	
